Eticaret sistemi icin gerekli xhtml sayfalari ve css ayarlari olusturuldu. Sayfalardaki html tag hatalari giderildi

--- a/ozge-eticaret/ozge-eticaret-web/src/main/webapp/index.xhtml
+++ b/ozge-eticaret/ozge-eticaret-web/src/main/webapp/index.xhtml
@@ -3,10 +3,66 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Welcome</title>
+        <link rel="stylesheet" type="text/css" href="css/affablebean.css"></link>  
     </h:head>
     <h:body>
-        Hello from Facelets
+        <div id="main">
+            <div id="header">
+                <div id="widgetBar">
+
+                    <div class="headerWidget">
+                        [ language toggle ]
+                    </div>
+
+                    <div class="headerWidget">
+                        [ shopping cart widget ]
+                    </div>
+
+                </div>
+
+                <a href="#">
+                    <img src="#" id="logo" alt="Affable Bean logo"/>
+                </a>
+
+                <img src="#" id="logoText" alt="the affable bean"/>
+            </div>
+
+            <div id="indexLeftColumn">
+                <div id="welcomeText">
+                    <p>[ welcome text ]</p>
+                </div>
+            </div>
+
+            <div id="indexRightColumn">
+                <div class="categoryBox">
+                    <a href="#">
+                        <span class="categoryLabelText">dairy</span>
+                    </a>
+                </div>
+                <div class="categoryBox">
+                    <a href="#">
+                        <span class="categoryLabelText">meats</span>
+                    </a>
+                </div>
+                <div class="categoryBox">
+                    <a href="#">
+                        <span class="categoryLabelText">bakery</span>
+                    </a>
+                </div>
+                <div class="categoryBox">
+                    <a href="#">
+                        <span class="categoryLabelText">fruit and veg</span>
+                    </a>
+                </div>
+            </div>
+
+            <div id="footer">
+                <hr/>
+                    <p id="footerText">[ footer text ]</p>
+                
+            </div>
+        </div>
     </h:body>
 </html>
 
